fix: update offcanvas title and manage sticky element overflow using javascript

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   font-size: 1.2rem;
   font-family: "Roboto", sans-serif;
   min-height: 4000px;
-  overflow-x: hidden;
 }
 
 .hero {
@@ -189,6 +188,9 @@ body {
   .home .heart {
     display: none;
   }
+}
+.sticky-top {
+  overflow: hidden;
 }
 
 /* Tablet */
